Ejemplo de animacion de texto agregado

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a target="_blank" href="https://platzi.com/blog/10-trucos-de-css-que-te-van-a-sorprender/"
               >Trucos de CSS que te van a sorprender</a>
           <nav class="mt-5">
+            <a href="./animacion-texto.html" class="nav-link">Link sobre animacion de texto</a>
             <a href="./truncar-texto.html" class="nav-link">Link sobre Truncar textos</a>
             <a href="./cursor-personalizado.html" class="nav-link">Link sobre Crear un cursor personalizado</a>
             <a href="./usar-condicionales.html" class="nav-link">Link sobre Usar Condicionales</a>
